<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.gurovic.gupython3.AnswerActivity"
    android:transitionGroup="false"
    >

    <WebView android:text="Medium text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display4"
        android:singleLine="false"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficult"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/answer"
        android:layout_below="@+id/answer_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/comment_title"
        android:layout_alignEnd="@+id/comment_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answer"
        android:id="@+id/answer_title"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        android:background="@color/bright_foreground_inverse_material_dark"
        android:layout_below="@+id/question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/question"
        android:layout_alignEnd="@+id/question" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/comment"
        android:id="@+id/comment_title"
        android:background="@color/bright_foreground_inverse_material_dark"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        android:layout_below="@+id/answer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/answer_title"
        android:layout_alignEnd="@+id/answer_title" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/comment"
        android:layout_below="@+id/comment_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/comment_title"
        android:layout_alignEnd="@+id/comment_title" />

</RelativeLayout>
